src/App.css
.App {
	font-family: 'Mohave', sans-serif;
	height: 100%;
}

.TopLevelNav {
	background-color: black;
}

@media (min-width: 993px) {
	.TopLevelNav {
		padding-left: 1em;
	}
}

.TopLevelNav a {
	color: gold;
	font-size: large;
}

a.brand-logo {
	font-size: 2.5em !important;
	font-family: 'Parisienne', cursive;
}

